--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -34,7 +34,7 @@ $lightGreen: #b9e7e7;
         flex-direction: column;
         padding: 50px;
         background-color: white;
-        width: 200px;
+       // width: 200px;
         gap: 20px;
 
         input {
